--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 	--background: #f4f7fd;
 	--foreground: #000112;
 	--white: #ffffff;
+	--black: #000112;
 	--purple: #635fc7;
 	--purple-hover: #a8a4ff;
 	--dark-grey: #2b2c37;
@@ -25,6 +26,7 @@
 .dark {
 	--background: #20212c;
 	--foreground: #ffffff;
+	--black: #ffffff;
 	--lines: #3e3f4e;
 	--white: #2b2c37;
 	--sidebar: hsl(240 5.9% 10%);
@@ -41,6 +43,7 @@
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--color-white: var(--white);
+	--color-black: var(--black);
 	--color-purple: var(--purple);
 	--color-purple-hover: var(--purple-hover);
 	--color-dark-grey: var(--dark-grey);
@@ -65,6 +68,7 @@
 
 body {
 	font-family: var(--font-plus-jakarta-sans);
+	background-color: var(--background);
 	font-weight: bold;
 	display: flex;
 	flex-direction: column;
